tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_async_backpressure_boundary_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: async-backpressure-boundary-v1
title: Async queues expose backpressure or capacity boundaries
status: pass
policies: RUST-AGENT-ASYNC-BACKPRESSURE-001
bench_entry: harness=libtest test=unbounded_async_queue_without_backpressure_is_agent_advice snapshot=scenario_benchmark_async_backpressure_boundary_v1
observed_total: <measured>
target_total: 20ms
max_total: 70ms
observed_memory_bytes: <measured>
memory_budget_bytes: 1048576
regression_budget: 15ms
agent_goal: Detect async Rust code that creates an unbounded queue without a readiness, try_send, reserve, semaphore, or bounded-capacity boundary, then move the queue behind explicit backpressure.
reference_repositories: tokio-rs/tokio,hyperium/hyper,tower-rs/tower
reference_patterns: Hyper wraps unbounded client dispatch senders behind poll_ready, can_send, and try_send boundaries instead of exposing fire-and-forget enqueue paths. | Tower service APIs make readiness and backpressure an explicit contract around request dispatch. | Tokio provides bounded mpsc channels and reserve-style capacity APIs when senders must respect runtime memory behavior.
target_rationale: The fixture is a tiny async queue boundary check; detecting unbounded queue creation should remain bounded in unit-test scale.
inputs: inputs
expected: expected
comparison_total: input=15ms expected=5ms
comparison_memory_bytes: input=262144 expected=180224
comparison_interpretation: Expected uses a bounded channel with explicit capacity; fixture receipt is 66.67% faster and uses 31.25% less memory than the input shape.
comparison_wall_time_delta: expected_vs_input=-66.67% speedup=3.00x
comparison_memory_delta: expected_vs_input=-31.25% reduction=31.25%
scenario_gate_timings: parse=<measured>,policy=<measured>,snapshot=<measured>
violations: -
