tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_async_blocking_boundary_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: async-blocking-boundary-v1
title: Blocking work is isolated from async runtime workers
status: pass
policies: RUST-AGENT-ASYNC-BLOCKING-001
bench_entry: harness=libtest test=scenario_benchmark_async_blocking_boundary_v1_snapshot snapshot=scenario_benchmark_async_blocking_boundary_v1
observed_total: <measured>
target_total: 25ms
max_total: 80ms
observed_memory_bytes: <measured>
memory_budget_bytes: 8388608
regression_budget: 15ms
agent_goal: Move blocking sleeps, file probes, and CPU-heavy loops behind an explicit Tokio blocking boundary before adding async orchestration.
reference_repositories: tokio-rs/tokio,hyperium/hyper,tower-rs/tower
reference_patterns: Tokio keeps blocking work behind spawn_blocking or a dedicated runtime boundary | Async orchestration remains cancellation-aware and runtime-worker friendly
target_rationale: The scenario is a metadata and snapshot gate; the expected fixture models Tokio-style blocking isolation without running a runtime benchmark in unit tests.
inputs: inputs
expected: expected
comparison_total: input=18ms expected=6ms
comparison_memory_bytes: input=4194304 expected=3145728
comparison_interpretation: expected isolates blocking work from runtime workers; observed speedup 3.00x and memory reduction 25.00%
comparison_wall_time_delta: expected_vs_input=-66.67% speedup=3.00x
comparison_memory_delta: expected_vs_input=-25.00% reduction=25.00%
scenario_gate_timings: contract_deserialize=<measured>,receipt_render=<measured>,snapshot_assertion=<measured>
violations: -
