tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_async_select_cancellation_safety_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: async-select-cancellation-safety-v1
title: Tokio select branches stay cancellation-safe around exact I/O
status: pass
policies: RUST-AGENT-ASYNC-CANCEL-SAFETY-001
bench_entry: harness=libtest test=tokio_select_read_exact_is_cancellation_safety_advice snapshot=scenario_benchmark_async_select_cancellation_safety_v1
observed_total: <measured>
target_total: 20ms
max_total: 70ms
observed_memory_bytes: <measured>
memory_budget_bytes: 1048576
regression_budget: 15ms
agent_goal: Detect async Rust code that places cancellation-unsafe exact I/O helpers inside tokio::select!, then move partial-progress I/O outside cancellation competition or use a cancellation-safe read/write loop.
reference_repositories: tokio-rs/tokio,hyperium/hyper
reference_patterns: Tokio documents select cancellation safety and classifies exact async I/O helpers such as read_exact, read_to_end, read_to_string, write_all, and write_all_buf as not cancellation safe. | Hyper keeps async dispatch and readiness in explicit poll/state boundaries instead of racing partial-progress I/O helpers in select branches. | Cancellation-safe async code keeps partial-progress buffers and state outside branches that can be dropped before completion.
target_rationale: The fixture is a tiny macro-token async cancellation check; detecting unsafe select branches should stay bounded in unit-test scale.
inputs: inputs
expected: expected
comparison_total: input=12ms expected=6ms
comparison_memory_bytes: input=245760 expected=196608
comparison_interpretation: Expected keeps exact I/O outside cancellation competition; fixture receipt is 50.00% faster and uses 20.00% less memory than the input shape.
comparison_wall_time_delta: expected_vs_input=-50.00% speedup=2.00x
comparison_memory_delta: expected_vs_input=-20.00% reduction=20.00%
scenario_gate_timings: parse=<measured>,policy=<measured>,snapshot=<measured>
violations: -
