tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_async_sync_lock_boundary_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: async-sync-lock-boundary-v1
title: Sync lock guards do not cross async suspension points
status: pass
policies: RUST-AGENT-ASYNC-SYNC-LOCK-001
bench_entry: harness=libtest test=sync_lock_guard_across_await_is_agent_advice snapshot=scenario_benchmark_async_sync_lock_boundary_v1
observed_total: <measured>
target_total: 20ms
max_total: 70ms
observed_memory_bytes: <measured>
memory_budget_bytes: 1048576
regression_budget: 15ms
agent_goal: Detect async Rust code that holds a std::sync or parking_lot Mutex/RwLock guard across .await, then scope or drop the guard before the await or move the state boundary to tokio::sync.
reference_repositories: tokio-rs/tokio,hyperium/hyper,tower-rs/tower
reference_patterns: Tokio exposes async-aware synchronization primitives when a guard must interact with async scheduling. | Runtime-facing code keeps synchronous Mutex and RwLock critical sections short and outside suspension points.
target_rationale: The fixture is a tiny async boundary check; validating the lock-scope pattern should remain bounded in unit-test scale.
inputs: inputs
expected: expected
comparison_total: input=16ms expected=6ms
comparison_memory_bytes: input=262144 expected=196608
comparison_interpretation: Expected scopes the sync guard before .await; fixture receipt is 62.50% faster and uses 25.00% less memory than the input shape.
comparison_wall_time_delta: expected_vs_input=-62.50% speedup=2.67x
comparison_memory_delta: expected_vs_input=-25.00% reduction=25.00%
scenario_gate_timings: parse=<measured>,policy=<measured>,snapshot=<measured>
violations: -
