tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_async_task_lifecycle_boundary_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: async-task-lifecycle-boundary-v1
title: Tokio spawned tasks keep an explicit lifecycle boundary
status: pass
policies: RUST-AGENT-ASYNC-TASK-LIFECYCLE-001
bench_entry: harness=libtest test=tokio_spawn_join_handle_lifecycle_is_required snapshot=scenario_benchmark_async_task_lifecycle_boundary_v1
observed_total: <measured>
target_total: 20ms
max_total: 70ms
observed_memory_bytes: <measured>
memory_budget_bytes: 1048576
regression_budget: 15ms
agent_goal: Detect async Rust code that discards Tokio JoinHandles, then preserve the task lifecycle by returning, storing, joining, aborting, or supervising the spawned task.
reference_repositories: tokio-rs/tokio,hyperium/hyper,tower-rs/tower
reference_patterns: Tokio spawn returns a JoinHandle that is the ownership boundary for awaiting task completion or aborting work during shutdown. | Runtime-facing services keep background workers supervised by a driver, worker handle, cancellation token, or shutdown boundary instead of silently detaching them. | Agent edits should not introduce fire-and-forget tasks unless a named detached-task boundary documents the lifecycle contract.
target_rationale: The fixture is a tiny Tokio task lifecycle check; detecting discarded JoinHandles should stay bounded in unit-test scale.
inputs: inputs
expected: expected
comparison_total: input=12ms expected=6ms
comparison_memory_bytes: input=245760 expected=196608
comparison_interpretation: Expected returns an explicit worker handle instead of silently detaching the task; fixture receipt is 50.00% faster and uses 20.00% less memory than the input shape.
comparison_wall_time_delta: expected_vs_input=-50.00% speedup=2.00x
comparison_memory_delta: expected_vs_input=-20.00% reduction=20.00%
scenario_gate_timings: parse=<measured>,policy=<measured>,snapshot=<measured>
violations: -
