tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_async_timeout_cancellation_safety_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: async-timeout-cancellation-safety-v1
title: Tokio timeout wrappers stay cancellation-safe around exact I/O
status: pass
policies: RUST-AGENT-ASYNC-CANCEL-SAFETY-002
bench_entry: harness=libtest test=tokio_timeout_read_exact_is_cancellation_safety_advice snapshot=scenario_benchmark_async_timeout_cancellation_safety_v1
observed_total: <measured>
target_total: 20ms
max_total: 70ms
observed_memory_bytes: <measured>
memory_budget_bytes: 1048576
regression_budget: 15ms
agent_goal: Detect async Rust code that wraps cancellation-unsafe exact I/O helpers in tokio::time::timeout, then move partial-progress I/O outside the timed future or use a cancellation-safe polling loop.
reference_repositories: tokio-rs/tokio,hyperium/hyper
reference_patterns: Tokio timeout cancels its inner future by dropping it when elapsed, so the inner future must own a cancellation-safe progress contract. | Tokio documents exact async I/O helpers such as read_exact, read_to_end, read_to_string, write_all, and write_all_buf as not cancellation safe. | Runtime-facing timeout boundaries keep partial-progress buffers and state outside futures that may be dropped before completion.
target_rationale: The fixture is a tiny async timeout cancellation check; detecting unsafe timeout wrappers should stay bounded in unit-test scale.
inputs: inputs
expected: expected
comparison_total: input=12ms expected=6ms
comparison_memory_bytes: input=245760 expected=196608
comparison_interpretation: Expected keeps exact I/O progress outside the timed future; fixture receipt is 50.00% faster and uses 20.00% less memory than the input shape.
comparison_wall_time_delta: expected_vs_input=-50.00% speedup=2.00x
comparison_memory_delta: expected_vs_input=-20.00% reduction=20.00%
scenario_gate_timings: parse=<measured>,policy=<measured>,snapshot=<measured>
violations: -
