tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_control_flow_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: control-flow-v1
title: Control-flow verification stays bounded
status: pass
policies: RUST-CFG-R001
bench_entry: harness=libtest test=scenario_benchmark_control_flow_v1_snapshot snapshot=scenario_benchmark_control_flow_v1
observed_total: <measured>
target_total: 25ms
max_total: 100ms
observed_memory_bytes: <measured>
memory_budget_bytes: 8388608
regression_budget: 20ms
agent_goal: Find the control-flow owner before editing.
target_rationale: Parser-native owner selection should remain a small fixture test.
inputs: inputs
expected: expected
timings: parse=<measured>,render=<measured>,snapshot=<measured>
violations: -
