tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_data_structure_linear_membership_scan_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: data-structure-linear-membership-scan-v1
title: Linear membership scans are indexed before traversal
status: pass
policies: RUST-AGENT-DS-001
bench_entry: harness=libtest test=scenario_benchmark_data_structure_linear_membership_scan_v1_snapshot snapshot=scenario_benchmark_data_structure_linear_membership_scan_v1
observed_total: <measured>
target_total: 20ms
max_total: 75ms
observed_memory_bytes: <measured>
memory_budget_bytes: 8388608
regression_budget: 15ms
agent_goal: Replace loop-local linear membership scans with an indexed lookup before changing the traversal.
reference_repositories: rust-lang/rust,rust-lang/cargo,BurntSushi/ripgrep
reference_patterns: Membership-heavy traversal builds an index before the hot loop | Complexity-changing refactors carry input and expected performance evidence
target_rationale: Membership-indexing policy coverage should remain a small parser-native fixture.
inputs: inputs
expected: expected
comparison_total: input=14ms expected=5ms
comparison_memory_bytes: input=4194304 expected=3145728
comparison_interpretation: expected indexes membership before traversal; observed speedup 2.80x and memory reduction 25.00%
comparison_wall_time_delta: expected_vs_input=-64.29% speedup=2.80x
comparison_memory_delta: expected_vs_input=-25.00% reduction=25.00%
scenario_gate_timings: contract_deserialize=<measured>,receipt_render=<measured>,snapshot_assertion=<measured>
violations: -
