tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_process_command_probe_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: process-command-probe-v1
title: Process command probes keep typed receipts
status: pass
policies: RUST-AGENT-PROC-001
bench_entry: harness=libtest test=scenario_benchmark_process_command_probe_v1_snapshot snapshot=scenario_benchmark_process_command_probe_v1
observed_total: <measured>
target_total: 25ms
max_total: 100ms
observed_memory_bytes: <measured>
memory_budget_bytes: 8388608
regression_budget: 20ms
agent_goal: Keep command construction, environment shaping, output parsing, and receipts in separate owners before editing process probes.
reference_repositories: rust-lang/cargo,rust-lang/rust,rust-lang/rustup
reference_patterns: Process command probes separate command construction from execution | Expected fixtures keep command arguments explicit and bounded
target_rationale: Parser-native process probe scenario checks must stay inside the small fixture budget.
inputs: inputs
expected: expected
comparison_total: input=31ms expected=19ms
comparison_memory_bytes: input=6291456 expected=4194304
comparison_interpretation: Expected keeps command construction, PATH shaping, output parsing, and receipts split while staying faster in this fixture; future scenarios may record input as faster when that is the real evidence.
comparison_wall_time_delta: expected_vs_input=-38.71% speedup=1.63x
comparison_memory_delta: expected_vs_input=-33.33% reduction=33.33%
scenario_gate_timings: contract_deserialize=<measured>,receipt_render=<measured>,snapshot_assertion=<measured>
violations: -
