tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_public_dynamic_json_api_boundary_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: public-dynamic-json-api-boundary-v1
title: Public Rust APIs keep JSON behind typed payload boundaries
status: pass
policies: RUST-AGENT-API-SHAPE-036
bench_entry: harness=libtest test=public_dynamic_json_api_uses_typed_boundaries snapshot=scenario_benchmark_public_dynamic_json_api_boundary_v1
observed_total: <measured>
target_total: 20ms
max_total: 70ms
observed_memory_bytes: <measured>
memory_budget_bytes: 1048576
regression_budget: 15ms
agent_goal: Detect public Rust APIs that expose `serde_json::Value`, then replace the untyped boundary with named request, response, enum, or documented adapter types.
reference_repositories: serde-rs/json,tokio-rs/axum,hyperium/hyper
reference_patterns: `serde_json::Value` belongs at parser, adapter, or intentionally documented dynamic boundaries; public library APIs expose typed contracts. | HTTP and async service layers translate raw wire payloads into named request and response types before crossing domain boundaries. | Agent edits should not spread untyped JSON shape through public APIs because that forces later agents to infer payload contracts from call-site archaeology.
target_rationale: The fixture is a tiny public API shape check; detecting dynamic JSON boundaries should remain bounded in unit-test scale.
inputs: inputs
expected: expected
comparison_total: input=10ms expected=5ms
comparison_memory_bytes: input=237568 expected=188416
comparison_interpretation: Expected replaces raw JSON API shape with typed payload contracts; fixture receipt is 50.00% faster and uses 20.69% less memory than the input shape.
comparison_wall_time_delta: expected_vs_input=-50.00% speedup=2.00x
comparison_memory_delta: expected_vs_input=-20.69% reduction=20.69%
scenario_gate_timings: parse=<measured>,policy=<measured>,snapshot=<measured>
violations: -
