tests/unit/snapshots/unit_test__scenario_benchmark__scenario_benchmark_rust_package_edition_2024_v1.snap
---
source: tests/unit/scenario_benchmark.rs
expression: render_rust_scenario_benchmark_snapshot(&receipt)
---
scenario: rust-package-edition-2024-v1
title: Rust packages target edition 2024
status: pass
policies: RUST-AGENT-PROJECT-MANIFEST-023
bench_entry: harness=libtest test=scenario_benchmark_rust_package_edition_2024_v1_snapshot snapshot=scenario_benchmark_rust_package_edition_2024_v1
observed_total: <measured>
target_total: 5ms
max_total: 25ms
observed_memory_bytes: <measured>
memory_budget_bytes: 2097152
regression_budget: 5ms
agent_goal: Keep new Rust packages on the current edition baseline so agent-authored code can use modern Rust syntax and lints without stale template drift.
reference_repositories: rust-lang/rust,rust-lang/cargo
reference_patterns: Cargo package metadata declares the current Rust edition explicitly | Expected fixtures keep edition policy in Cargo.toml rather than hidden source checks
target_rationale: Manifest edition scenarios are metadata-only and should stay in the low millisecond fixture budget.
inputs: inputs
expected: expected
comparison_total: input=4ms expected=3ms
comparison_memory_bytes: input=1048576 expected=1048576
comparison_interpretation: Expected removes the stale edition finding with no extra runtime or memory cost; equal memory is acceptable because the fixture only changes Cargo metadata.
comparison_wall_time_delta: expected_vs_input=-25.00% speedup=1.33x
comparison_memory_delta: expected_vs_input=+0.00% reduction=0.00%
comparison_expected_not_faster_annotation: Memory is unchanged because the expected fixture only updates Cargo edition metadata; the quality gain is compatibility with current Rust syntax rather than allocator reduction.
scenario_gate_timings: manifest_deserialize=<measured>,policy_projection=<measured>,snapshot_assertion=<measured>
violations: -
